scss/screen.scss
/*
  Formatting rules for this file:
  
  - Don't use tabs.
  - 2 space indents.
  - Use a leading space after a rule like so:
  - Braces are used like this:
  
    .ui-bar-c {
      border: none;
    }
    
  - Not like this:
  
    .ui-bar-c {
      border: none;
      }

  - ...or like this:
  
      .ui-bar-c {
      border: none;
      }
      
  - ...or like this:
  
    .ui-bar-c{
      border: none;
    }
    
  - Just one space after colon and none before:
  
    border: none;
  
*/

@import "partials/base";
@import "partials/jplayer";
@import "partials/icons";


/* ************************************************************************* *
   Various jQuery Mobile fixes
 * ************************************************************************* */
 
.ui-bar-c {
  border: none;
}

.ui-content .ui-field-contain {
  padding: 0 !important;
  margin: 0 !important;
}

.ui-icon-shadow {
  @include box-shadow(none);
}

#submenu {
  margin: 1px 10px 0 0;
  float: right;
  .ui-btn {
    width: 65px;
    background: none;
  }
  .ui-icon { 
    width: 30px; 
    left: 21px;
    @include border-radius(0, 0);
  }
  .ui-btn-active {
    background-color: #262626;
    border: 1px solid black;
    .ui-btn-inner {
      border-color: black; 
      width: 47px !important;
      height: 24px !important;
    }
  }
  .ui-icon-bookmark-list {
    margin: -13px 0px 0px 0px;
  }
  .ui-icon-book-index {
    margin: -9px 0px 0px 0px;
  }
  .ui-btn-inner {
    width: 47px !important;
    height: 24px !important;
  }
}

.ui-header {
  background: #464646 url(../images/bg_pattern_black.png) repeat;
  border-top: 1px solid #72716e;
  border-bottom: 1px solid #000;
  height: 2.6875em;
  
  h1.ui-title {
    font-size: 18px !important;
    color:#fff;
    @include text-shadow(#000 0 -1px 0);
  }
  .ui-btn {
    font-size: 13px;
    height: 30px !important;
    top: 5px !important;
    &.ui-btn-icon-notext {
      width: 60px;
      font-family: "Arial"; 
    }
  }
  /* The blue button problem (#431): override lyt.css.ui-btn-active, TODO better to modify theme roller? */
  .ui-btn-active {
    background-image: -webkit-linear-gradient( #5D5B5B /*{b-bup-background-start}*/, #434141 /*{b-bup-background-end}*/);
    color: white /*{b-bup-color}*/;
    border: 1px solid black /*{b-bup-border}*/;
  }
  .ui-btn-right {
    right: 10px !important;
  }
  .ui-btn-left {
    left: 10px !important;
  }
  .ui-btn-inner {
    padding: .4em 8px .5em !important;
  }
}

.ui-btn-active {
  @include box-shadow(none);
  @include text-shadow(none);
}

.ui-page {
  background: #b5d6f1 url(../images/bg_pattern_blue.png) repeat;
}

.ui-content {
  background: transparent;
  position: relative;
}

/* Remove gradients from listviews */
.ui-listview li {
  &, &:hover, &.ui-btn-hover {
    background-image: none;
    border-top-width: 0px;
  }
}

/* IE seems to miscalculate the position of the autocomplete list.. it probably forgets about 
   some margins or padding..  fix the list at 100px, which seems to be correct on all browsers. */
.ui-autocomplete {
  top:100px !important;
}

/* "JavaScript required" message handling ************************************ */

html {
  &.js {
    #no-js {
      visibility: hidden;
    }
  }
  &.no-js {
    #no-js {
      visibility: visible;
    }
    #jplayer {
      visibility: hidden;
    }
    #bookshelf {
      visibility: hidden;
    }
  }
}

/* Fixes a problem with auto calculation of the z-index property on Apple
   Safari on IOS platforms */

#profile {
  z-index:100;
}
#support {
  z-index:101;
}
#about {
  z-index:102;
}
#book-index {
  z-index:103;
}
#share {
  z-index:104;
}
#login {
  z-index:105;
}
#splash-upgrade {
  z-index:106;
}

/* Background colors ******************************************************* */

#settings, #profile, #about, #support {
  &.ui-page {background: #9f9f9furl(../images/bg_pattern_grey.png) repeat;}
}

#login {
  &.ui-page {background: #bed5e8 url(../images/bg_pattern_blue2.png) repeat;}
}


/* ************************************************************************* *
   Styling own elements
 * ************************************************************************* */
 
img.e17-logo {
  display: block;
  margin-left: auto;
  margin-right: auto;
  padding-botton: 10px;
}

/* ************************************************************************* *
   jQuery Mobile loader
 * ************************************************************************* */
 
.ui-loader.ui-loader-default {
  .ui-icon-loading {
    margin: 0 auto;
  }
  h1 {
    font-size: 15px;
    text-align: center;
    width: 200px;
    height: 30px;
    color: white;
    text-shadow: 0 0px 0 white; 
  }
  display: none;
  position: absolute;
  opacity: .75;
  z-index: 200;
  left: 50%;
  width: 200px;
  height: 90px;
  margin-left: -130px;
  margin-top: -35px;
  padding: 10px 30px;
  border: 2px;
  background: black;
}


/* ************************************************************************* *
   Bookshelf
 * ************************************************************************* */
 
.bookshelf-content, #book-index {
  .ui-li, .ui-li.ui-field-contain {
    border-top: none;
  }
  
  .ui-listview {
    margin-bottom: 0;
  }
}
/* ... */

